--- a/files/个检数据/styles.css
+++ b/files/个检数据/styles.css
@@ -7261,6 +7261,29 @@
   box-sizing:border-box;
   width:100%;
 }
+#u24411_div.mouseOver {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:89px;
+  height:24px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(2, 167, 240, 1);
+  border-radius:2px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u24411.mouseOver {
+}
 #u24411_text {
   border-width:0px;
   word-wrap:break-word;
