--- a/files/危急值/styles.css
+++ b/files/危急值/styles.css
@@ -8252,6 +8252,26 @@
   box-sizing:border-box;
   width:100%;
 }
+#u14177_div.mouseOver {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:84px;
+  height:24px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(2, 167, 240, 1);
+  border-radius:2px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u14177.mouseOver {
+}
 #u14177_text {
   border-width:0px;
   word-wrap:break-word;
