--- a/files/外部科室工作量/styles.css
+++ b/files/外部科室工作量/styles.css
@@ -9178,6 +9178,26 @@
   box-sizing:border-box;
   width:100%;
 }
+#u17472_div.mouseOver {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:84px;
+  height:24px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(2, 167, 240, 1);
+  border-radius:2px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u17472.mouseOver {
+}
 #u17472_text {
   border-width:0px;
   word-wrap:break-word;
