--- a/files/短信发送统计/styles.css
+++ b/files/短信发送统计/styles.css
@@ -10377,6 +10377,29 @@
   box-sizing:border-box;
   width:100%;
 }
+#u18019_div.mouseOver {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:89px;
+  height:24px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(2, 167, 240, 1);
+  border-radius:2px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC', sans-serif;
+  font-weight:400;
+  font-style:normal;
+}
+#u18019.mouseOver {
+}
 #u18019_text {
   border-width:0px;
   word-wrap:break-word;
